tests/compile_fail/seed_debug.stderr
error[E0277]: `Seed` doesn't implement `Debug`
 --> tests/compile_fail/seed_debug.rs:3:15
  |
3 |     println!("{seed:?}");
  |               ^^^^^^^^ `Seed` cannot be formatted using `{:?}` because it doesn't implement `Debug`
  |
  = help: the trait `Debug` is not implemented for `Seed`
  = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
